--- a/web.config
+++ b/web.config
@@ -9,5 +9,10 @@
                 <remove value="Default.htm" />
             </files>
         </defaultDocument>
+		<httpProtocol>
+			<customHeaders>
+				<add name = "X-UA-Compatible" value = "chrome=1" />
+			</customHeaders>
+		</httpProtocol>
     </system.webServer>
 </configuration>
